# Recomendador-de-Filmes

./: README.md  api_filmes.py  preferencias.json  pyproject.toml
recomendador/: __main__.py  consultas.py  filme.py  regras.py
recomendador/static/: bootstrap.css  bulma.css  custom.css
recomendador/templates/: ator.html  base.html  detalhes.html  index.html  pagination.html  preferencias.html  recomendacoes.html
