[tool.poetry]
name = "recomendador"
version = "0.1.0"
description = "Sistema recomendador de filmes baseado em regras lógicas."
authors = ["Paulo Silas Severo de Souza <paulosilas@unipampa.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tabulate = "^0.9.0"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
